# forma-synth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  release.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/patches/Ambient/: 02 Void Walker.json  04 Interstellar Drift.json  Ambient Bass.json  Ambient Pad.json  Ambient Sprinkle.json  Ambient Texture.json  Breath Pad.json  Crystal Cave.json  Deep Space.json  Distant Choir.json  Drone.json  Eno Space.json  Granular Wind.json  Meditation.json  Morning Shimmer.json  Night Drift.json  Still Water.json  Tape Echo.json
assets/patches/Bass/: ARP Bass.json  Acid Bass.json  Acid Drop.json  Bass Station Bass.json  Brute Bass.json  DX7 Bass.json  Detroit Bass.json  Double Bass.json  Juno Bass.json  Midnight Crawler.json  Minimoog Bass.json  Moog Bass.json  OB Bass.json  Outrun Bass.json  Prologue Bass.json  Prophet Bass.json  Serum Bass.json  Sub 37 Bass.json  Sub Bass.json  Sub Wobble.json  Taurus Bass.json  Vital Bass.json  Voltage Storm.json
assets/patches/Brass/: Alto Saxophone.json  Brass Stab.json  Brass.json  Clarinet.json  DX7 Brass.json  Flute.json  French Horn.json  Iron Forest.json  Mellow Brass.json  Minimoog Brass.json  OB Brass.json  Prophet Brass.json  Trombone.json  Trumpet.json  Woodwind Ensemble.json
assets/patches/Eno/: Airport Shimmer.json  Ambient Tape Bass.json  Discreet Music Bell.json  Fourth World Choir.json  Oblique Pad.json  Tape Loop Drone.json
assets/patches/FX/: Brute Metallic.json  Downlifter.json  FM Metal.json  Glitch Burst.json  Horror Stab.json  Impact Hit.json  Laser.json  Noise Drop.json  Noise Sweep.json  Phantom Signal.json  R2D2.json  Ring Mod Bell.json  Riser.json  Serum Growl.json  Solar Wind.json  Sub Boom.json  Zap.json
assets/patches/Frahm/: Felt Bass.json  Felt Piano.json  Keys Tail.json  Mechanical Breath.json  Organ Swell.json  Warm Rhodes.json
assets/patches/Glass/: Ostinato Bass.json
assets/patches/Keys/: ARP Keys.json  Celeste.json  Church Organ.json  Clav.json  Clavinet Funk.json  Crystal Bell.json  DX7 Electric Piano.json  Dyno Rhodes.json  Electric Piano.json  Farfisa Organ.json  Gospel Organ.json  Hammond B3.json  Harpsichord.json  Juno Keys.json  Mellotron Keys.json  Minimoog Keys.json  OB Keys.json  Organ.json  Prologue Keys.json  Prophet Keys.json  Retrowave Keys.json  Rhodes Tremolo.json  Serum Keys.json  Spectral Keys.json  Sub 37 Keys.json  Suitcase Rhodes.json  Toy Piano.json  Vibraphone.json  Vital Keys.json  Vox Continental.json  Wurlitzer.json
assets/patches/Lead/: ARP Lead.json  Acid Lead.json  Acid Rain.json  Bass Station Lead.json  Blues Tone.json  Brute Lead.json  Classic Lead.json  DX7 Lead.json  Digital Ghost.json  Fuzz Face.json  Juno Brass.json  Juno Lead.json  Kavinsky Lead.json  Metal Zone.json  Minimoog Lead.json  Neon Drive.json  Neon Razor.json  OB Lead.json  Power Lead.json  Prologue Lead.json  Prophet Lead.json  Serum Lead.json  Square Lead.json  Sub 37 Lead.json  Supersaw Lead.json  Sync Lead.json  Vital Lead.json
assets/patches/Pad/: 01 Titan Rising.json  03 Cathedral.json  05 Dark Matter.json  06 Ascension.json  07 Frozen Tundra.json  08 War Drums.json  09 Distant Horizon.json  10 Eternal Flame.json  11 Ghost Protocol.json  12 Requiem.json  13 Solar Wind.json  14 Ancient Ruins.json  15 Singularity.json  16 Ember.json  17 Leviathan.json  18 Celestial Gate.json  19 Last Rites.json  20 Omega Point.json  ARP Pad.json  Aurora.json  Berlin Pad.json  (+21 more)
crates/forma/: Cargo.toml
crates/forma-common/: Cargo.toml
crates/forma-control/: Cargo.toml
crates/forma-control/src/: event.rs  lib.rs  midi.rs  protocol.rs  source.rs
crates/forma-dsp/: Cargo.toml
crates/forma-engine/: Cargo.toml
crates/forma-engine/examples/: parse_scene.rs
crates/forma-engine/src/: arp.rs  audio.rs  denormals.rs  drum.rs  gated_voice.rs  handle.rs  lib.rs  multi.rs  patch.rs  voice.rs
crates/forma-engine/src/generative/: engine.rs  generators.rs  markov.rs  mod.rs  patch.rs
crates/forma-engine/tests/: handle_smoke.rs
crates/forma/assets/icons/: forma.icns  icon.icns
crates/forma/examples/: 01_sine_wave.rs  02_waveforms.rs  03_envelope.rs  04_filter.rs
crates/forma/src/: audio.rs  eq.rs  history.rs  layout_store.rs  main.rs  midi_mapping_store.rs  midi_presets.rs  patch.rs  recorder.rs  scene.rs  sequencer.rs
crates/forma/src/ui/: arp_walker.rs  dock.rs  drum_machine_ui.rs  eq_ui.rs  frame.rs  fx_chain.rs  history_ui.rs  keyboard.rs  layout.rs  live_view.rs  metronome.rs  midi.rs  mixer.rs  mod.rs  modulation.rs  oscillators.rs  patch_browser.rs  pattern_library.rs  rig_strip.rs  scene_browser.rs  scope.rs  scope_wgpu.rs  sequencer_ui.rs  snap.rs  theme.rs
crates/forma/src/ui/design/: adsr_display.rs  beat_indicator.rs  chip.rs  chord_pad.rs  drum_step.rs  fader.rs  filter_display.rs  gallery.rs  knob.rs  layout.rs  level_meter.rs  lfo_indicator.rs  mini_bar.rs  mod.rs  osc_display.rs  piano.rs  section.rs  slider.rs  step_pad.rs  theme_editor.rs  toggle.rs
crates/forma/src/ui/widgets/: knob.rs  mod.rs
docs/: index.html
docs/audio/: forma-demo.m4a
docs/design-system/: 01-philosophy.md  02-tokens.md  03-primitives.md  04-components.md  05-patterns.md  06-window-scaling.md  07-implementation-plan.md  08-ux-conventions.md  README.md
(+51 files in other folders)
