[package]
name = "forma-control"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
crossbeam-channel = "0.5"
midir   = "0.11"
anyhow  = "1"
serde   = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
