[package]
name = "forma-engine"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
forma-dsp     = { path = "../forma-dsp" }
forma-common  = { path = "../forma-common" }
forma-control = { path = "../forma-control" }
fundsp        = { version = "0.23", features = ["files", "fft"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"

[dev-dependencies]
forma-control = { path = "../forma-control", features = ["serde"] }
serde_json    = "1"
