[package]
name = "forma"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.bundle]
name = "The Synth"
identifier = "com.francescoventura.forma"
version = "0.1.0"
license = "MIT OR Apache-2.0"
copyright = "© 2026 Francesco Ventura"
category = "Music"
short_description = "Moog-style software synthesizer"
long_description = "A polyphonic software synthesizer with oscillators, filter, LFO, arpeggiator, effects chain, and sequencer."
icon = ["assets/icons/icon_512x512@2x.png", "assets/icons/icon_256x256.png", "assets/icons/icon_128x128.png", "assets/icons/icon_32x32.png", "assets/icons/icon_16x16.png"]
resources = ["assets/patches"]

[features]
# Enables the multi-track LIVE rig and drum machine UI surfaces.
# Not yet production-ready — off by default so main branch builds clean.
live_rig = []

[dependencies]
# Dipendenze interne
forma-dsp     = { path = "../forma-dsp" }
forma-engine  = { path = "../forma-engine" }
forma-control = { path = "../forma-control", features = ["serde"] }
forma-common  = { path = "../forma-common" }

# Dipendenze esterne (spostate dalla root)
fundsp      = { version = "0.23", features = ["fft"] }
cpal        = "0.15"
anyhow      = "1"
eframe      = { version = "0.34", features = ["wgpu"], default-features = false }
bytemuck    = { version = "1", features = ["derive"] }
egui        = "0.34"
midir       = "0.9"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rfd         = "0.15"
egui_dock   = "0.19"
hound       = "3"
