[package]
name = "forma"
version = "0.1.3"
license = "GPL-3.0-only"
edition = "2021"
publish = false

[package.metadata.bundle]
name = "Forma"
identifier = "com.francescoventura.forma"
version = "0.1.3"
license = "GPL-3.0-only"
copyright = "© 2026 Francesco Ventura"
category = "Music"
short_description = "Moog-style software synthesizer"
long_description = "A polyphonic software synthesizer with oscillators, filter, LFO, arpeggiator, effects chain, and sequencer."
icon = ["crates/forma/assets/icons/forma.icns", "crates/forma/assets/icons/icon_512x512@2x.png", "crates/forma/assets/icons/icon_256x256.png", "crates/forma/assets/icons/icon_128x128.png", "crates/forma/assets/icons/icon_32x32.png", "crates/forma/assets/icons/icon_16x16.png"]
resources = ["assets/patches"]

[features]
# Enables the multi-track LIVE rig and drum machine UI surfaces.
# Not yet production-ready — off by default so main branch builds clean.
live_rig = []

[dependencies]
# Dipendenze interne
forma-dsp     = { path = "../forma-dsp" }
forma-engine  = { path = "../forma-engine" }
forma-control = { path = "../forma-control", features = ["serde"] }
forma-common  = { path = "../forma-common" }

# Dipendenze esterne (spostate dalla root)
fundsp      = { version = "0.23", features = ["fft"] }
cpal        = "0.15"
anyhow      = "1"
eframe      = { version = "0.34", features = ["wgpu"], default-features = false }
bytemuck    = { version = "1", features = ["derive"] }
egui        = "0.34"
midir       = "0.11"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rfd         = "0.15"
egui_dock   = "0.19"
hound       = "3"
image       = { version = "0.25", default-features = false, features = ["png"] }
directories = "6"
include_dir = { version = "0.7", features = ["glob"] }
